--- a/config/tsconfig.json
+++ b/config/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "outDir": "dist",
+        "outDir": "config/dist",
         "experimentalDecorators": true
     }
 }
